@@ -9,6 +9,7 @@ Version 6.6 - not yet released
   - allow configuration of "Final glide bar" display (#2554)
   - new snail trail option "Vario-scaled dots and lines"
   - topography icons
+  - don't draw pan info over north arrow (#2765)
 * cross section
   - show airspace names (#1149, #2390)
   - use glide polar instead of current glide ratio (#2687)
